Footer z-index fix

--- a/styles/style.less
+++ b/styles/style.less
@@ -322,7 +322,7 @@
         position: absolute;
         bottom: 48px;
         left: 55px;
-        z-index: 1;
+        z-index: 3;
         display: none;
         }
     .footer__panel_is-active_true {
